--- a/src/Eccube/Resource/template/admin/Content/block_edit.twig
+++ b/src/Eccube/Resource/template/admin/Content/block_edit.twig
@@ -74,6 +74,15 @@
                         </div>
                     </div>
                 </div>
+                <div class="extra-form">
+                {% for f in form.getIterator %}
+                        {% if f.vars.name matches '[^plg*]' %}
+                            {{ form_label(f) }}
+                            {{ form_widget(f) }}
+                            {{ form_errors(f) }}
+                        {% endif %}
+                    {% endfor %}
+                </div>
             </div>
 
             <div class="row hidden-xs hidden-sm">
