--- a/src/Eccube/Resource/template/admin/Content/layout.twig
+++ b/src/Eccube/Resource/template/admin/Content/layout.twig
@@ -74,6 +74,15 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
                 <div class="box">
                     <div class="box-header">
                         {{ form_widget(list_form.layout) }}
+                        <div class="extra-form">
+                        {% for f in list_form.getIterator %}
+                                {% if f.vars.name matches '[^plg*]' %}
+                                    {{ form_label(f) }}
+                                    {{ form_widget(f) }}
+                                    {{ form_errors(f) }}
+                                {% endif %}
+                            {% endfor %}
+                        </div>
                     </div>
                     <div class="box-body no-border row">
                         <div class="col-md-8">
@@ -274,6 +283,15 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
                                 </table>
                             </div>
                         </div><!-- /.col -->
+                    </div>
+                    <div class="extra-form">
+                    {% for f in form.getIterator %}
+                            {% if f.vars.name matches '[^plg*]' %}
+                                {{ form_label(f) }}
+                                {{ form_widget(f) }}
+                                {{ form_errors(f) }}
+                            {% endif %}
+                        {% endfor %}
                     </div>
                     <div class="row">
                         <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 text-center btn_area2">
