【管理画面/新着情報管理】新着情報管理画面のhookpointを追加

--- a/src/Eccube/Resource/template/admin/Content/news.twig
+++ b/src/Eccube/Resource/template/admin/Content/news.twig
@@ -90,6 +90,15 @@ function changeAction(action) {
                             </div>
                         </div>
                     </form>
+                    <div class="extra-form">
+                    {% for f in form.getIterator %}
+                            {% if f.vars.name matches '[^plg*]' %}
+                                {{ form_label(f) }}
+                                {{ form_widget(f) }}
+                                {{ form_errors(f) }}
+                            {% endif %}
+                        {% endfor %}
+                    </div>
                 </div>
             </div><!-- /.box -->
             <div class="row">
