--- a/src/Eccube/Resource/template/admin/Content/news_edit.twig
+++ b/src/Eccube/Resource/template/admin/Content/news_edit.twig
@@ -83,6 +83,15 @@ $(function() {
 
                         {{ form_row(form.select) }}
 
+                        <div class="extra-form">
+                        {% for f in form.getIterator %}
+                                {% if f.vars.name matches '[^plg*]' %}
+                                    {{ form_label(f) }}
+                                    {{ form_widget(f) }}
+                                    {{ form_errors(f) }}
+                                {% endif %}
+                            {% endfor %}
+                        </div>
                     </div><!-- /.box-body -->
                 </form>
             </div><!-- /.box -->
