--- a/src/Eccube/Resource/template/admin/Content/page.twig
+++ b/src/Eccube/Resource/template/admin/Content/page.twig
@@ -78,6 +78,15 @@
 
                         </div>
                     </div>
+                    <div class="extra-form">
+                    {% for f in form.getIterator %}
+                            {% if f.vars.name matches '[^plg*]' %}
+                                {{ form_label(f) }}
+                                {{ form_widget(f) }}
+                                {{ form_errors(f) }}
+                            {% endif %}
+                        {% endfor %}
+                    </div>
                 </div><!-- /.box-body -->
             </div><!-- /.box -->
             <!-- ▲ データがある時 ▲ -->
