--- a/src/Eccube/Resource/template/admin/Content/block.twig
+++ b/src/Eccube/Resource/template/admin/Content/block.twig
@@ -30,27 +30,27 @@
 
 {% block main %}
 <form name="content_block_form" id="content_block_form" method="post" action="">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="box">
-                    <div class="box-header">
-                        <div class="box-title">
+    <div id="block" class="container-fluid">
+        <div id="block_list" class="row">
+            <div id="block_list_box" class="col-md-12">
+                <div id="block_list_main" class="box">
+                    <div id="block_list_main__header" class="box-header">
+                        <div id="block_list_main__title" class="box-title">
                             ブロック一覧
                         </div>
                     </div>
-                    <div class="box-body no-padding no-border">
-                        <div class="sortable_list">
+                    <div id="block_list_main__body" class="box-body no-padding no-border">
+                        <div id="block_list_main__list" class="sortable_list">
                             <div class="tableish">
                                 {% for Block in Blocks %}
-                                    <div class="item_box tr">
-                                        <div class="item_pattern td">
+                                    <div id="block_list_main__item--{{ Block.id }}" class="item_box tr">
+                                        <div id="block_list_main__name--{{ Block.id }}" class="item_pattern td">
                                             {{ Block.name }}
                                         </div>
-                                        <div class="icon_edit td">
-                                            <div class="dropdown">
+                                        <div id="block_list_main__menu_box--{{ Block.id }}" class="icon_edit td">
+                                            <div id="block_list_main__menu_box_toggle--{{ Block.id }}" class="dropdown">
                                                 <a class="dropdown-toggle" data-toggle="dropdown"><svg class="cb cb-ellipsis-h"> <use xlink:href="#cb-ellipsis-h" /></svg></a>
-                                                <ul class="dropdown-menu dropdown-menu-right">
+                                                <ul id="block_list_main__menu--{{ Block.id }}" class="dropdown-menu dropdown-menu-right">
                                                     <li>
                                                         <a href="{{ url('admin_content_block_edit', {id: Block.id}) }}">編集</a>
                                                     </li>
@@ -72,8 +72,8 @@
                 </div><!-- /.box -->
             </div><!-- /.col -->
 
-            <div class="row btn_area2">
-                <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 text-center">
+            <div id="block_list_footer" class="row btn_area2">
+                <div id="block_list_footer__button_area" class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 text-center">
                     <a class="btn btn-primary btn-block btn-lg" href="{{ url('admin_content_block_new')}}">新規入力</a>
                 </div>
             </div>
