--- a/src/Eccube/Resource/template/admin/Content/page_edit.twig
+++ b/src/Eccube/Resource/template/admin/Content/page_edit.twig
@@ -37,15 +37,15 @@
         {{ form_widget(form.id) }}
         {{ form_widget(form.DeviceType, { attr : { style : 'display: none;' } } ) }}
         <div class="row" id="aside_wrap">
-            <div class="col-md-9">
-                <div class="box form-horizontal">
-                    <div class="box-header">
+            <div id="page_edit" class="col-md-9">
+                <div id="page_edit_box" class="box form-horizontal">
+                    <div id="page_edit_box__header" class="box-header">
                         <h3 class="box-title">ページ詳細編集</h3>
                     </div>
                     <!-- /.box-header -->
-                    <div class="box-body">
+                    <div id="block_edit_box__body" class="box-body">
 
-                        <div class="form-group">
+                        <div id="page_edit_box__main_edit_name" class="form-group">
                             {{ form_label(form.name) }}
                             <div class="col-sm-9 col-lg-10">
                                 {% if editable %}
@@ -57,7 +57,7 @@
                                 {{ form_errors(form.name) }}
                             </div>
                         </div>
-                        <div class="form-group word-break">
+                        <div id="page_edit_box__main_edit_url" class="form-group word-break">
                             {{ form_label(form.url) }}
                             <div class="col-sm-9 col-lg-10 form-inline">
                                 {% if editable %}
@@ -69,7 +69,7 @@
                                 {{ form_errors(form.url) }}
                             </div>
                         </div>
-                        <div class="form-group word-break">
+                        <div id="page_edit_box__main_edit_file_name" class="form-group word-break">
                             {{ form_label(form.file_name) }}
                             <div class="col-sm-9 col-lg-10 form-inline">
                                 {% if editable %}
@@ -82,7 +82,7 @@
                             </div>
                         </div>
 
-                        <div class="form-group">
+                        <div id="page_edit_box__main_edit_tpl_data" class="form-group">
                             {{ form_label(form.tpl_data) }}
                             <div class="col-sm-9 col-lg-10">
                                 {{ form_widget(form.tpl_data, { attr : { 'rows' : 15, style : 'font-size:12px' } }) }}
@@ -91,15 +91,15 @@
                         </div>
                     </div>
                 </div>
-                <div class="box form-horizontal">
-                    <div class="box-header">
+                <div id="page_edit_box__meta" class="box form-horizontal">
+                    <div id="page_edit_box__meta_header" class="box-header">
                         <h3 class="box-title">
                             meta設定
                         </h3>
                     </div>
                     <!-- /.box-header -->
 
-                    <div class="box-body">
+                    <div id="page_edit_box__meta_body" class="box-body">
                         {{ form_row(form.author) }}
                         {{ form_row(form.description) }}
                         {{ form_row(form.keyword) }}
@@ -110,11 +110,11 @@
             <!-- /.col -->
             <div class="col-md-3">
                 <div class="col_inner" id="aside_column">
-                    <div class="box no-header">
-                        <div class="box-body">
-                            <div class="row text-center">
+                    <div id="button_box" class="box no-header">
+                        <div id="button_box__body" class="box-body">
+                            <div id="button_box__button_area" class="row text-center">
                                 <div class="col-sm-6 col-sm-offset-3 col-md-12 col-md-offset-0">
-                                    <button class="btn btn-primary btn-block btn-lg"
+                                    <button id="button_box__insert_button" class="btn btn-primary btn-block btn-lg"
                                             onclick="document.content_page_form.submit();">登録
                                     </button>
                                 </div>
