規格編集・規格分類のtwig修正

--- a/src/Eccube/Resource/template/admin/Product/class_category.twig
+++ b/src/Eccube/Resource/template/admin/Product/class_category.twig
@@ -78,14 +78,14 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 {% endblock %}
 
 {% block main %}
-    <div id="class_category" class="row">
-        <div class="col-md-12">
-            <div class="box">
-                <div class="box-header">
+    <div id="box" class="row">
+        <div id="box_main" class="col-md-12">
+            <div id="box_main__content" class="box">
+                <div id="content_box__header" class="box-header">
                     <h3 class="box-title">規格名： {{ ClassName.name }}</h3>
                 </div>
-                <div class="box-body">
-                    <div class="form-inline">
+                <div id="content_box__body" class="box-body">
+                    <div id="content_box__form" class="form-inline">
                         <form role="form" class="form-horizontal" name="form1" id="form1" method="post" action="{% if TargetClassCategory.id %}{{ url('admin_product_class_category_edit', {class_name_id: ClassName.id, id: TargetClassCategory.id}) }}{% else %}{{ url('admin_product_class_category', {'class_name_id': ClassName.id}) }}{% endif %}">
                             {{ form_widget(form._token) }}
                             {{ form_widget(form.name, {attr: {placeholder: '分類名を入力'}}) }}
@@ -94,23 +94,23 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
                     </div>
                 </div><!-- /.box-header -->
                 {% if ClassCategories|length > 0 %}
-                    <div id="class_category_list" class="box-body no-padding no-border">
-                        <div class="sortable_list">
-                            <div class="tableish">
+                    <div id="content_box__list" class="box-body no-padding no-border">
+                        <div id="list_box" class="sortable_list">
+                            <div id="list_box__tableish" class="tableish">
 
                                 {% for ClassCategory in ClassCategories %}
 
-                                    <div id="class_category_list__body__{{ ClassCategory.id }}" class="item_box tr" data-category-id="{{ ClassCategory.id }}" data-rank="{{ ClassCategory.rank }}">
+                                    <div id="list_box_list__body__{{ ClassCategory.id }}" class="item_box tr" data-category-id="{{ ClassCategory.id }}" data-rank="{{ ClassCategory.rank }}">
                                         <div class="icon_sortable td">
                                             <svg class="cb cb-ellipsis-v"> <use xlink:href="#cb-ellipsis-v" /></svg>
                                         </div>
-                                        <div id="class_category_list__title__{{ Category.id }}" class="item_pattern td">
+                                        <div id="list_box_list__title__{{ ClassCategory.id }}" class="item_pattern td">
                                             <a href="{{ url('admin_product_class_category_edit', {class_name_id: ClassName.id, id: ClassCategory.id}) }}">
                                                 {{ ClassCategory.name }}
                                             </a>
                                         </div>
-                                        <div id="class_category_list__edit__{{ Category.id }}" class="icon_edit td">
-                                            <div class="dropdown">
+                                        <div id="list_box_list__edit__{{ ClassCategory.id }}" class="icon_edit td">
+                                            <div id="list_box_edit__menu__{{ ClassCategory.id }}" class="dropdown">
                                                 <a class="dropdown-toggle" data-toggle="dropdown"><svg class="cb cb-ellipsis-h"> <use xlink:href="#cb-ellipsis-h" /></svg></a>
                                                 <ul class="dropdown-menu dropdown-menu-right">
                                                     {% if ClassCategory.id != TargetClassCategory.id %}
@@ -134,16 +134,16 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
                         </div>
                     </div><!-- /.box-body -->
                 {% else %}
-                    <div id="class_category_list" class="box-body no-padding">
-                        <div class="data-empty"><svg class="cb cb-inbox"> <use xlink:href="#cb-inbox" /></svg><p>データはありません</p></div>
+                    <div id="content_box__list" class="box-body no-padding">
+                        <div id="content_box__empty" class="data-empty"><svg class="cb cb-inbox"> <use xlink:href="#cb-inbox" /></svg><p>データはありません</p></div>
                     </div><!-- /.box-body -->
                 {% endif %}
                 <!-- ▲ データがある時 ▲ -->
             </div><!-- /.box -->
         </div><!-- /.col -->
     </div>
-    <div id="class_category_back" class="row">
-        <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 text-center btn_area">
+    <div id="link_box__back" class="row">
+        <div id="link_box__back_link" class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 text-center btn_area">
             <p><a href="{{ url('admin_product_class_name') }}">規格一覧に戻る</a></p>
         </div>
     </div>
