--- a/src/Eccube/Resource/template/admin/Content/cache.twig
+++ b/src/Eccube/Resource/template/admin/Content/cache.twig
@@ -31,18 +31,18 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 {% block main %}
 <form name="form1" method="post" action="{{ url('admin_content_cache') }}">
     {{ form_widget(form._token) }}
-    <div class="row">
+    <div id="cache" class="row">
         <div class="col-md-12">
-            <div class="box">
-                <div class="box-header">
-                    <h3 class="box-title">キャッシュ管理</h3>
-                    <div style="margin-left: 10px;">
+            <div id="cache_box" class="box">
+                <div id="cache_box_main" class="box-header">
+                    <h3 id="cache_box_main__header" class="box-title">キャッシュ管理</h3>
+                    <div id="cache_box_main__body" style="margin-left: 10px;">
                         <p class="text-danger">本番環境にFTPなどでTwigファイルをアップロードして入れ替えた場合、画面を反映させるにはTwigキャッシュをクリアをする必要があります。</p>
                         <p>キャッシュをクリアをするには「キャッシュクリア」ボタンを押してください。</p>
                     </div>
                 </div>
-                <div class="box-body">
-                    <button type="submit" class="btn btn-primary" name="mode" value="twig">キャッシュクリア</button>
+                <div id="cache_box_footer" class="box-body">
+                    <button id="cache_box__clear_button" type="submit" class="btn btn-primary" name="mode" value="twig">キャッシュクリア</button>
                 </div>
             </div>
         </div>
