--- a/src/Eccube/Resource/template/admin/Content/file.twig
+++ b/src/Eccube/Resource/template/admin/Content/file.twig
@@ -61,18 +61,18 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
     <input type="hidden" name="select_file" value="" />
     <div class="row" id="aside_wrap">
 
-        <div class="col-md-9">
-            <div class="box">
-                <div class="box-header form-horizontal">
+        <div id="file" class="col-md-9">
+            <div id="file_box" class="box">
+                <div id="file_box__body" class="box-header form-horizontal">
                     {{ form_widget(form._token) }}
-                    <div class="form-group">
+                    <div id="file_box__form_file" class="form-group">
                         <label class="col-sm-4 col-lg-3 control-label">ファイルのアップロード</label>
                         <div class="col-sm-8 col-lg-9 padT07">
                             {{ form_widget(form.file) }}
                             <div class="marT10"><a class="btn btn-default btn-sm" href="javascript;" onclick="eccube.fileManager.setTreeStatus('tree_status');eccube.setModeAndSubmit('upload','',''); return false;">アップロード</a></div>
                         </div>
                     </div>
-                    <div class="form-group form-inline">
+                    <div id="file_box__form_create_file" class="form-group form-inline">
                         <label class="col-sm-4 col-lg-3 control-label">フォルダ作成</label>
                         <div class="col-sm-8 col-lg-9">
                             {{ form_widget(form.create_file) }}
@@ -86,9 +86,9 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
                 </div><!-- /.box-header -->
 
                 <div id="bread" style="margin-left: 10px;"></div>
-                <div class="box-body">
-                    <div class="table_list">
-                        <div class="table-responsive">
+                <div id="result_list" class="box-body">
+                    <div id="result_list_main" class="table_list">
+                        <div id="result_list_main__body" class="table-responsive">
                             <table class="table table-striped with-border">
                                 <thead>
                                     <tr>
@@ -113,7 +113,7 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
                 {% endif %}
                 {% for file in arrFileList %}
                     <tr id="{{ loop.index }}" style="">
-                        <td class="file-name" onDblClick="eccube.fileManager.setTreeStatus('tree_status');eccube.fileManager.doubleClick(arrTree, '{{ file.file_path }}', {% if file.is_dir %}true{% else %}false{% endif %} '{{ tpl_now_dir }}', false)">
+                        <td id="result_list_main__file_name" class="file-name" onDblClick="eccube.fileManager.setTreeStatus('tree_status');eccube.fileManager.doubleClick(arrTree, '{{ file.file_path }}', {% if file.is_dir %}true{% else %}false{% endif %} '{{ tpl_now_dir }}', false)">
                             {% if file.is_dir %}
                                 <svg class="cb cb-folder"><use xlink:href="#cb-folder" /></svg>
                             {% else %}
@@ -121,13 +121,13 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
                             {% endif %}
                             {{ file.file_name }}
                         </td>
-                        <td class="text-right">
+                        <td id="result_list_main__file_size" class="text-right">
                             {{ file.file_size }}
                         </td>
-                        <td class="text-center">
+                        <td id="result_list_main__file_time" class="text-center">
                             {{ file.file_time }}
                         </td>
-                        <td class="text-center">
+                        <td id="result_list_main__is_dir" class="text-center">
                             {% if file.is_dir %}
                                 <a href="javascript:;" onclick="eccube.setValue('tree_select_file', '{{ file.file_path }}', 'form1'); eccube.fileManager.selectFile('{{ loop.index }}', '#808080');eccube.setModeAndSubmit('move','',''); return false;">表示</a>
                             {% else %}
@@ -136,13 +136,13 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
                         </td>
                         {% if file.is_dir %}
                             {# ディレクトリはダウンロード不可 #}
-                            <td class="text-center">-</td>
+                            <td id="result_list_main__file_download" class="text-center">-</td>
                         {% else %}
-                            <td class="text-center">
+                            <td id="result_list_main__file_download"class="text-center">
                                 <a href="{{ url('admin_content_file_download') }}?select_file={{ file.file_path|e('url') }}" target="_blank">ダウンロード</a>
                             </td>
                         {% endif %}
-                        <td class="text-center">
+                        <td id="result_list_main__file_delete" class="text-center">
                             <a href="{{ url('admin_content_file_delete', { 'select_file': file.file_path}) }}" {{ csrf_token_for_anchor() }} data-method="delete" data-message="一度削除したデータは元に戻せません。削除してもよろしいですか？">削除</a>
                         </td>
                     </tr>
@@ -155,11 +155,11 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
             </div>
         </div><!-- /.col -->
         
-        <div class="col-md-3">
+        <div id="common_box" class="col-md-3">
             <div class="col_inner" id="aside_column">
-                <div class="box no-header">
-                    <div class="box-body">
-                        <div class="row">
+                <div id="tree_box" class="box no-header">
+                    <div id="tree_box__body" class="box-body">
+                        <div id="tree_box__tree_area" class="row">
                             <div class="col-sm-6 col-sm-offset-3 col-md-12 col-md-offset-0">
                                 <div id="tree"></div>
                             </div>
